FestinaLenteApp/src/objects/Class__c.object
<CustomObject>
    <customHelpPage>Help</customHelpPage>
    <fields>
        <fullName>AgeGroup__c</fullName>
        <label>Age Group</label>
        <picklist>
            <picklistValues>
                <fullName>Adult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AvailableDateCount__c</fullName>
        <label>Available Date Count</label>
        <summaryForeignKey>AvailableDate__c.Class__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BookedDateCount__c</fullName>
        <label>Booked Date Count</label>
        <summarizedField>Booking__c.AvailableDatesBooked__c</summarizedField>
        <summaryForeignKey>Booking__c.Class__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BookingCount__c</fullName>
        <label>Booking Count</label>
        <summaryForeignKey>Booking__c.Class__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Coach__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Coach</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Classes</relationshipLabel>
        <relationshipName>Classes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DayOfWeekNumber__c</fullName>
        <formula>CASE(DayOfWeek__c,
    &apos;Sunday&apos;, 0,
    &apos;Monday&apos;, 1,
    &apos;Tuesday&apos;, 2,
    &apos;Wednesday&apos;, 3,
    &apos;Thursday&apos;, 4,
    &apos;Friday&apos;, 5,
    &apos;Saturday&apos;, 6,
    null
)</formula>
        <label>Day of Week Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DayOfWeek__c</fullName>
        <label>Day of Week</label>
        <picklist>
            <picklistValues>
                <fullName>Monday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunday</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Detail__c</fullName>
        <label>Detail</label>
        <picklist>
            <picklistValues>
                <fullName>Lesson</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Stable Management then Lesson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lesson then Stable Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EarliestAvailableDate__c</fullName>
        <label>Earliest Available Date</label>
        <summarizedField>AvailableDate__c.Date__c</summarizedField>
        <summaryForeignKey>AvailableDate__c.Class__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EarliestToLatestWeeks__c</fullName>
        <formula>IF (NOT(ISNULL(EarliestAvailableDate__c)) &amp;&amp; NOT(ISNULL(LatestAvailableDate__c)), CEILING((LatestAvailableDate__c - EarliestAvailableDate__c) / 7) + 1, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Earliest To Latest Weeks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LatestAvailableDate__c</fullName>
        <label>Latest Available Date</label>
        <summarizedField>AvailableDate__c.Date__c</summarizedField>
        <summaryForeignKey>AvailableDate__c.Class__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LengthInMinutes__c</fullName>
        <formula>CASE( Length__c,
    &apos;Day&apos;, 480,
    &apos;Half Day&apos;, 240,
    &apos;90 mins&apos;, 90,
    &apos;60 mins&apos;, 60,
    &apos;45 mins&apos;, 45,
    &apos;30 mins&apos;, 30,
    &apos;2 hours&apos;, 120,
    &apos;2 hours 30 mins&apos;, 150,
    &apos;3 hours&apos;, 180,
    &apos;3 hours 30 mins&apos;, 210,
    &apos;4 hours&apos;, 240,
    &apos;4 hours 30 mins&apos;, 270,
    &apos;5 hours&apos;, 300,
    &apos;5 hours 30 mins&apos;, 330,
    &apos;6 hours&apos;, 360,
    &apos;6 hours 30 mins&apos;, 390,
    &apos;7 hours&apos;, 420,
    &apos;7 hours 30 mins&apos;, 450,
    NULL
)</formula>
        <label>Length in Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Length__c</fullName>
        <label>Length</label>
        <picklist>
            <picklistValues>
                <fullName>30 mins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45 mins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 mins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90 mins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 hours 30 mins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 hours 30 mins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 hours 30 mins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 hours 30 mins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 hours 30 mins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 hours 30 mins</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>B - Beginner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI - Beginner Improver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I - Intermediate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SI - Strong Intermediate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A - Advanced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SpacesAvailable__c</fullName>
        <label>Spaces Available</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SpacesBookedAvailableWithPercent__c</fullName>
        <formula>IF(NOT(ISNULL(SpacesBookedAvailable__c)), TEXT(ROUND(SpacesBookedAvailable__c * 100, 0)) + &apos;%&apos;, NULL)</formula>
        <label>Spaces Booked/Available</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpacesBookedAvailable__c</fullName>
        <formula>IF(
    AND(NOT(ISNULL(BookedDateCount__c)), NOT(ISNULL(SpacesAvailable__c)), NOT(ISNULL(AvailableDateCount__c))),
    IF(SpacesAvailable__c *  AvailableDateCount__c != 0, (BookedDateCount__c) / (SpacesAvailable__c *  AvailableDateCount__c), NULL),
    NULL
)</formula>
        <label>Spaces Booked/Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TimeInMinutes__c</fullName>
        <formula>CASE(Time__c,
&apos;8 am&apos;, 480,
&apos;8:15 am&apos;, 495,
&apos;8:30 am&apos;, 510,
&apos;8:45 am&apos;, 525,
&apos;9 am&apos;, 540,
&apos;9:15 am&apos;, 555,
&apos;9:30 am&apos;, 570,
&apos;9:45 am&apos;, 585,
&apos;10 am&apos;, 600,
&apos;10:15 am&apos;, 615,
&apos;10:30 am&apos;, 630,
&apos;10:45 am&apos;, 645,
&apos;11 am&apos;, 660,
&apos;11:15 am&apos;, 675,
&apos;11:30 am&apos;, 690,
&apos;11:45 am&apos;, 705,
&apos;12 pm&apos;, 720,
&apos;12:15 pm&apos;, 735,
&apos;12:30 pm&apos;, 750,
&apos;12:45 pm&apos;, 765,
&apos;1 pm&apos;, 780,
&apos;1:15 pm&apos;, 795,
&apos;1:30 pm&apos;, 810,
&apos;1:45 pm&apos;, 825,
&apos;2 pm&apos;, 840,
&apos;2:15 pm&apos;, 855,
&apos;2:30 pm&apos;, 870,
&apos;2:45 pm&apos;, 885,
&apos;3 pm&apos;, 900,
&apos;3:15 pm&apos;, 915,
&apos;3:30 pm&apos;, 930,
&apos;3:45 pm&apos;, 945,
&apos;4 pm&apos;, 960,
&apos;4:15 pm&apos;, 975,
&apos;4:30 pm&apos;, 990,
&apos;4:45 pm&apos;, 1005,
&apos;5 pm&apos;, 1020,
&apos;5:15 pm&apos;, 1035,
&apos;5:30 pm&apos;, 1050,
&apos;5:45 pm&apos;, 1065,
&apos;6 pm&apos;, 1080,
&apos;6:15 pm&apos;, 1095,
&apos;6:30 pm&apos;, 1110,
&apos;6:45 pm&apos;, 1125,
null
)</formula>
        <label>Time in Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <picklist>
            <picklistValues>
                <fullName>8 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:15 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:45 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:15 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:30 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:45 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:15 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:45 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:15 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:45 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:15 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:45 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:15 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:45 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:15 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:45 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:15 pm</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Adult Camp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAL Session</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Educational Helpers Programme</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EFEP Programme</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pony Camp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Lesson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Private Lesson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Needs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stable Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supported Helpers Programme</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Therapeutic Lesson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training: EAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training: TCP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Class</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Coach__c</columns>
        <columns>DayOfWeek__c</columns>
        <columns>Time__c</columns>
        <columns>Length__c</columns>
        <columns>Level__c</columns>
        <columns>SpacesBookedAvailableWithPercent__c</columns>
        <columns>EarliestAvailableDate__c</columns>
        <columns>LatestAvailableDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>Class Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>